# risechain

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/primitives/: Cargo.toml
crates/primitives/src/: ipc.rs  lib.rs  rpc.rs
