[workspace]
members = ["crates/primitives"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
alloy-consensus = "1.8.3"
alloy-primitives = "1.5.7"
alloy-rpc-types-eth = "1.8.3"
alloy-serde = "1.8.3"

reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }

reth-optimism-primitives = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5" }

serde = "1.0.228"

[patch.crates-io]
# Reth still pins these packages from crates.io while OP crates depend on their local ones.
# We must unify to the latter until they are published to crates.io or until Reth stops importing them.
op-alloy-consensus = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5" }
