[workspace]
members = ["crates/primitives"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
alloy-consensus = "2.0.5"
alloy-primitives = "1.6.0"
alloy-rpc-types-eth = "2.0.5"
alloy-serde = "2.0.5"

reth-primitives-traits = "0.3.1"
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }

reth-optimism-primitives = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v2.2.5", features = [
  "serde",
] }

bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.11.1"
futures = "0.3.32"
serde = "1.0.228"
thiserror = "2.0.18"

tokio = "1.52.2"
tokio-util = { version = "0.7.18", features = ["codec"] }
