[workspace]
members = ["crates/primitives"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
alloy-consensus = "2.1.0"
alloy-primitives = "1.6.0"
alloy-rpc-types-eth = "2.1.0"
alloy-serde = "2.1.0"

reth-primitives-traits = "0.5.2"
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.3.0" }

reth-optimism-primitives = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v2.3.3", features = [
  "serde",
] }

bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.12.0"
futures = "0.3.32"
serde = "1.0.228"
thiserror = "2.0.18"

tokio = "1.52.3"
tokio-util = { version = "0.7.18", features = ["codec"] }
