[package]
edition.workspace = true
name = "rise-primitives"
version = "0.1.0"

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true

reth-primitives.workspace = true
reth-rpc-eth-types.workspace = true

reth-optimism-primitives.workspace = true

serde.workspace = true
