[package]
edition.workspace = true
name = "rise-primitives"
version = "0.1.0"

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-serde.workspace = true

reth-primitives.workspace = true
reth-rpc-eth-types.workspace = true

reth-optimism-primitives.workspace = true

bincode.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true

tokio.workspace = true
tokio-util.workspace = true
